@@ -1,1 +1,2 @@
 Remove Weibull alias
+Remove WeibullMuSigma alias
