@@ -13,7 +13,7 @@ A *DistributionParameters* object can be used through its derived classes:
 - :class:`~openturns.GumbelAB`
 - :class:`~openturns.LogNormalMuSigma`
 - :class:`~openturns.LogNormalMuSigmaOverMu`
-- :class:`~openturns.WeibullMuSigma`
+- :class:`~openturns.WeibullMinMuSigma`
 
 See also
 --------
