@@ -78,8 +78,8 @@ built dist= LogNormal(muLog = -1.00525, sigmaLog = 1.50164, gamma = -0.5)
 [[  0.256272  0.418663  0        ]
  [ -0.170824  0.113758  0        ]
  [ -1.6771    0.527516  1        ]]
-Distribution Parameters  class=WeibullMuSigma name=Unnamed mu=1.3 sigma=1.23 gamma=-0.5
-Distribution Parameters  WeibullMuSigma(mu = 1.3, sigma = 1.23, gamma = -0.5)
+Distribution Parameters  class=WeibullMinMuSigma name=Unnamed mu=1.3 sigma=1.23 gamma=-0.5
+Distribution Parameters  WeibullMinMuSigma(mu = 1.3, sigma = 1.23, gamma = -0.5)
 non-native= [1.3,1.23,-0.5] [mu,sigma,gamma]
 native= [1.99222,1.48961,-0.5]
 non-native= [1.3,1.23,-0.5]
